<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorEggshell">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configuration"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/colorEggshell"
        android:gravity="center"
        android:background="@color/colorCharcoalGray"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@color/colorApricot">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/label_device_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_address"
                android:textSize="18sp"/>

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/device_address_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Här kommer device address details"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/label_device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_name"
                android:textSize="18sp"/>

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/device_name_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Här kommer device name details"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/label_device_rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_rssi"
                android:textSize="18sp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/device_rssi_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Här kommer rssi details"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/label_device_serialnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_serialnumber"
                android:textSize="18sp"/>

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/device_serialnumber_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Här kommer device serialnumber"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/label_device_uuids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_uuids"
                android:textSize="18sp"/>

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/device_uuids_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Här kommer device uuids"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/label_major"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_major"
                android:textSize="18sp"/>
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edit_major"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:hint="@string/edit_major"
                android:gravity="center"
                android:background="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/label_minor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_minor"
                android:textSize="18sp"/>

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edit_minor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:hint="@string/edit_minor"
                android:gravity="center"
                android:background="@android:color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/activate"
            android:textStyle="bold"
            android:textColor="@color/colorEggshell"
            android:background="@color/colorCharcoalGray"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp" />

    </LinearLayout>
</LinearLayout>
