<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/label_proximity_uuid"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/view_proximity_uuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDimGray"
            android:textSize="24sp"
            tools:text="111111" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/label_major"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/view_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDimGray"
            android:textSize="24sp"
            tools:text="1111" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/label_minor"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/view_minor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            tools:text="1111"/>

    </LinearLayout>

</LinearLayout>